feat: cookie auth integration with swagger
